methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:9: error: ';' expected but 'return' found.
} return false ;
  ^