methods.returning.MethodsReturning.scala.code

def haveBaggle():Boolean = { 
  var bagel:Boolean=false
  for (i<- 1 to 7) {
    for (j<-1 to 7) { avance ; if (estSurBaggle) {bagel=true}
      }
  if (bagel==true){return bagel}
  else droite;avance;gauche}
} return false ;


